<resources>
    <string name="app_name">MiniBlogApp</string>
    <string name="app_title">Mini Blog App</string>
    <string name="login_as_admin">Đăng nhập tài khoản</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="signIn">Đăng nhập</string>
    <string name="userListTitle">Danh sách người dùng</string>
    <string name="postListTitle">Danh sách bài viết</string>
    <string name="submitPost">Đăng bài</string>
    <string name="createPostTitle">Tạo bài viết</string>
    <string name="postTitle">Tiêu đề bài viết</string>
    <string name="postContent">Nội dung bài viết</string>
    <string name="author">Người đăng bài</string>
    <string name="post">Bài viết</string>
    <string name="users">Người dùng</string>
    <string name="userSearchHint">Tìm kiếm theo tên tác giả</string>
    <string name="searchPostHint">Tìm kiếm theo tiêu đề, nội dung bài viết</string>
    <string name="userHasNoPost">Người dùng này chưa có bài viết nào</string>
    <string name="createPost">Tạo bài viết</string>
    <string name="authInotHaveAccountYet"><u>Chưa có tài khoản? Đăng ký ngay</u></string>
    <string name="authIwelcomeBack">Chào mừng bạn trở lại!</string>
    <string name="authIwelcomeBackSubtitle">Truy cập bằng tài khoản và mật khẩu bạn đã đăng ký</string>
    <string name="authIcreateNewAccount">Đăng ký tài khoản mới</string>
    <string name="authIcreateNewAccountSubtitle">Vui lòng điền đầy đủ các thông tin để đăng ký tài khoản mới</string>
    <string name="authIfullName">Họ và tên</string>
    <string name="authIemail">Email</string>
    <string name="authIpassword">Mật khẩu</string>
    <string name="authIsignUp">Đăng ký tài khoản</string>
    <string name="authIalreadyHaveAccount"><u>Đã có tài khoản? Đăng nhập ngay</u></string>
    <string name="authIsignIn">Đăng nhập</string>
    <string name="userIexplore">Khám phá</string>
    <string name="userIexploreDesc">Mọi blog xung quanh bạn</string>
    <string name="userIall">Tất cả</string>
    <string name="userIfollowing">Đang theo dõi</string>
    <string name="userIcreatePostTitle">Tạo bài viết</string>
    <string name="userIcreatePostDesc">Chia sẻ thông tin về thế giới xung quanh</string>
    <string name="userItitle">Tiêu đề</string>
    <string name="userIcontent">Nội dung</string>
    <string name="userIuploadPost">Đăng tải bài viết</string>
    <string name="userIfollowingDesc">Danh sách những người dùng bạn đã theo dõi</string>
    <string name="userIemptyFollowing">Bạn chưa theo dõi người dùng nào</string>
    <string name="userIsearch">Tìm kiếm</string>
    <string name="userIsearchDesc">Các bài viết, người dùng mà bạn muốn</string>
    <string name="userIsearchBarHint">Bạn muốn tìm gì?</string>
    <string name="userIrecent">Gần đây</string>
    <string name="userIuser">Người dùng</string>
    <string name="userIpost">Bài viết</string>
</resources>