<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/backButton"
            android:src="@drawable/chevron_left"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textFontWeight="700"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintEnd_toStartOf="@id/submitPost"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            android:text="@string/createPostTitle"/>

        <TextView
            android:id="@+id/submitPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textFontWeight="900"
            android:textColor="@color/royalBlue"
            android:text="@string/submitPost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:textFontWeight="900"
            android:indeterminate="true"
            android:indeterminateTint="@color/royalBlue"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/authorSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/author"
        android:textFontWeight="600"
        app:layout_constraintTop_toBottomOf="@id/headerSection"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/postUserDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/authorSection"/>

    <TextView
        android:id="@+id/postSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/post"
        android:textFontWeight="600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postUserDropdown"
        />

    <EditText
        android:id="@+id/postNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:hint="@string/postTitle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/postSection"
        />

    <EditText
        android:id="@+id/postContentInput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="12dp"
        android:inputType="textMultiLine"
        android:background="@drawable/edit_text"
        android:gravity="start"
        android:hint="@string/postContent"
        app:layout_constraintTop_toBottomOf="@id/postNameInput"/>

</androidx.constraintlayout.widget.ConstraintLayout>