<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authIwelcomeBack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/fontTitle"/>

            <TextView
                android:id="@+id/authIwelcomeBackSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/authIwelcomeBackSubtitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/fontSection"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@id/titleSection"
            app:layout_constraintStart_toStartOf="parent">
            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:enabled="true"
                android:background="@drawable/edit_text"
                android:hint="@string/authIemail"
                style="@style/fontContent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:enabled="true"
                android:background="@drawable/edit_text"
                android:layout_marginTop="12dp"
                android:hint="@string/authIpassword"
                android:inputType="textPassword"
                style="@style/fontContent"
                app:layout_constraintTop_toBottomOf="@id/usernameInput"
                app:layout_constraintStart_toStartOf="parent"/>
            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/primary_button"
                android:enabled="true"
                android:layout_marginTop="32dp"
                android:text="@string/authIsignIn"
                style="@style/fontContent"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@id/passwordInput"
                />
            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authInotHaveAccountYet"
                android:layout_marginTop="40dp"
                style="@style/fontNote"
                app:layout_constraintTop_toBottomOf="@id/signInButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>