<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userIexplore"
            android:includeFontPadding="false"
            android:layout_marginTop="20dp"
            style="@style/fontTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userIexploreDesc"
            style="@style/fontNote"
            android:textColor="@color/charleston20"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/subtitle">
            <RadioGroup
                android:id="@+id/tabsGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <RadioButton
                    android:id="@+id/allButton"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:background="@drawable/selectable_button_background"
                    android:text="@string/userIall"
                    android:textColor="@color/selector_text"
                    android:button="@null"
                    android:paddingHorizontal="11dp"
                    android:checked="true"
                    style="@style/fontNoteSemibold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <RadioButton
                    android:id="@+id/followingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:background="@drawable/selectable_button_background"
                    android:text="@string/userIfollowing"
                    android:textColor="@color/selector_text"
                    android:button="@null"
                    android:paddingHorizontal="11dp"
                    style="@style/fontNoteSemibold"
                    app:layout_constraintStart_toEndOf="@id/allButton"
                    app:layout_constraintTop_toTopOf="parent"/>
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tabs"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>