<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textFontWeight="700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/postListTitle"/>

        <EditText
            android:id="@+id/searchBar"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/search"
            android:hint="@string/searchPostHint"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_width="0dp"/>

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:indeterminate="true"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/royalBlue"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:contentDescription="@string/createPost"
            android:src="@drawable/edit"
            android:backgroundTint="@color/royalBlue"
            app:tint="@color/white"
            app:shapeAppearance="@style/circularImageStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
